# ransomeye

./: .env.example  .gitignore  .windsurfrules  Makefile  README.md  compliance_matrix.md  docker-compose.dev.yml  go.mod  go.sum
.claude/: settings.local.json
LICENSES/: THIRD_PARTY_NOTICES.md
configs/: common.yaml  common.yaml.template  server.crt
cursor-mishka-builder/: SKILL.md
deploy/: Dockerfile.core
docs/: CanonicalizationSpecification.md  EXECUTION_HARNESS.md  EXECUTION_SYSTEM.md  IMPLEMENTATION_PROMPT_SYSTEM.md  V0.0_SYSTEM_STATE.md  migration_checksum_repair.md
git-hooks/: pre-receive
installer/: Cargo.toml
installer/nginx/: ransomeye.conf
installer/src/: config_signer.rs  filesystem.rs  lib.rs  main.rs  nginx_setup.rs  postgres_setup.rs  postgres_tls.rs
installer/tests/: postgres_tls_test.rs
migrations/: 001_core_schema.sql  002_evidence_tables.sql  003_timescaledb_hypertables.sql  004_continuous_aggregates.sql  005_indexes.sql  006_worm_immutability.sql  007_row_level_security.sql  008_retention_policies.sql  009_merkle_immutability.sql  010_compound_incidents.sql  011_kill_chain_states.sql  012_endpoint_inventory.sql  013_chat_sessions.sql  014_threat_hunt_rules.sql  015_corroboration_reports.sql  016_fp_suppression.sql  017_signal_recalibration_audit.sql  018_grounding_columns.sql  019_ai_conformity_reports.sql  020_governance_audit_log.sql  021_threat_actor_groups.sql  022_attack_paths.sql  023_probe_registry.sql  024_network_infra_findings.sql  025_snmp_device_inventory.sql  026_reserved.sql  027_reserved.sql  028_reserved.sql  029_reserved.sql  030_bundle_application_log.sql  031_soc_users.sql  032_soc_sessions.sql  033_actions_approval_columns.sql  034_case_management.sql  035_simulation_runs.sql  036_replay_runs.sql  037_dashboard_detection_hourly.sql  (+7 more)
scripts/sign-integrity-manifest/: Cargo.toml  main.rs
signed-config/: Cargo.toml
signed-config/src/: lib.rs
sine-engine/: Cargo.toml  README.md  build.rs
sine-engine/src/: llm.rs  main.rs
(+502 files in other folders)
