[package]
name = "ransomeye-signed-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc", "pkcs8", "pem"] }
hex = "0.4"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = "1.11"
x509-parser = "0.16"
